# hot-potato

./: .gitmodules  Cargo.toml  README.md  railwind.config.ron
src/: main.rs  web_socket.rs
ui/: index.html  main.js  railwind.css  styles.css  test.html
