[package]
name = "hot_potato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
dirs = "5.0.0"
actix-web-actors = "4.2.0"
actix = "0.13.0"
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"

